# FastAPI-TrironServer-example

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  convert_sklearn.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  train_model.py
app/: main.py
app/api/: prediction.py
app/model/: pydantic.py
app/prediction_models/: __init__.py  client.py  model_client.py  sklearn_model.py  torch_model.py  xgboost_model.py
app/prediction_models/data/: scaler.pkl
models/rf/: config.pbtxt
models/rf/1/: checkpoint.tl  model.pkl
models/torch/: config.pbtxt
models/torch/1/: model.pt
models/xgb/: config.pbtxt
models/xgb/1/: xgboost.json
