[tool.poetry]
name = "prod_example"
version = "0.1.0"
description = "ML service example"
authors = ["A.Barmin"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
tritonclient = {extras = ["all"], version = "^2.27.0"}
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
scikit-learn = "^1.1.3"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.6.2"
black = "^22.10.0"
isort = "^5.10.1"
treelite = "2.4.0"
treelite-runtime = "2.4.0"
xgboost = "1.5.2"
torch = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
